# bigfloat

./: CMakeLists.txt  bigarithm.cpp  bigarithm.h  bigfloat.cpp  bigfloat.h  bigint.cpp  bigint.h  pi.cpp  testfloat.cpp  testint.cpp
include/: bigarithm.h  bigfloat.h
src/: bigarithm.cpp  bigfloat.cpp  bigint.cpp
